补全 hr 功能